fix: add pr fixes

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -8,6 +8,11 @@
     "scheme": "mobile",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "updates": {
+      "runtimeVersion": {
+        "policy": "appVersion"
+      }
+    },
     "ios": {
       "bundleIdentifier": "com.counsy.ai",
       "supportsTablet": true
