--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -5,13 +5,25 @@
   "main": "expo-router/entry",
   "scripts": {
     "android": "expo start --android",
+    "android:dev": "APP_ENV=development expo start --android",
+    "android:prod": "APP_ENV=production expo start --android",
+    "android:staging": "APP_ENV=staging expo start --android",
     "ios": "expo start --ios",
+    "ios:dev": "APP_ENV=development expo start --ios",
+    "ios:prod": "APP_ENV=production expo start --ios",
+    "ios:staging": "APP_ENV=staging expo start --ios",
     "lint": "expo lint",
     "reset-project": "node ./scripts/reset-project.js",
     "start": "expo start",
+    "start:dev": "APP_ENV=development expo start",
+    "start:prod": "APP_ENV=production expo start",
+    "start:staging": "APP_ENV=staging expo start",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@better-auth/expo": "^1.3.5",
+    "@counsy-ai/ts-rest": "workspace:*",
+    "@counsy-ai/types": "workspace:*",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -19,6 +31,9 @@
     "@tamagui/config": "^1.132.16",
     "@tamagui/font-inter": "^1.132.16",
     "@tamagui/lucide-icons": "^1.132.16",
+    "@tanstack/react-query": "^5.84.2",
+    "@ts-rest/react-query": "^3.52.1",
+    "better-auth": "catalog:",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -28,6 +43,7 @@
     "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
     "expo-router": "~5.1.4",
+    "expo-secure-store": "^14.2.3",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -45,6 +61,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tamagui": "^1.132.16",
+    "zod": "catalog:",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
