--- a/services/api/package.json
+++ b/services/api/package.json
@@ -23,6 +23,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@better-auth/expo": "^1.3.5",
     "@counsy-ai/ai": "workspace:*",
     "@counsy-ai/config": "workspace:*",
     "@counsy-ai/db": "workspace:*",
