feat: add app dynamic config and eas config for deployments

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -35,6 +35,8 @@
   "devDependencies": {
     "eslint": "catalog:",
     "prettier": "catalog:",
+    "prettier-package-json": "catalog:",
+    "prettier-plugin-organize-imports": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:",
     "typescript-eslint": "catalog:"
