--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -2,27 +2,31 @@
   "build": {
     "development": {
       "env": {
-        "APP_ENV": "development"
+        "EXPO_PUBLIC_APP_ENV": "development",
+        "APP_VERSION": "0.1.0"
       },
       "developmentClient": true,
       "distribution": "internal"
     },
     "staging": {
       "env": {
-        "APP_ENV": "staging"
+        "EXPO_PUBLIC_APP_ENV": "staging",
+        "APP_VERSION": "0.9.0"
       },
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "staging"
     },
     "production": {
       "env": {
-        "APP_ENV": "production"
-      }
+        "EXPO_PUBLIC_APP_ENV": "production",
+        "APP_VERSION": "1.0.0"
+      },
+      "distribution": "store",
+      "channel": "production",
+      "autoIncrement": true
     }
   },
   "cli": {
-    "version": ">= 13.0.0"
-  },
-  "submit": {
-    "production": {}
+    "appVersionSource": "remote"
   }
 }
