--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -8,6 +8,8 @@
     "android:dev": "APP_ENV=development expo start --android",
     "android:prod": "APP_ENV=production expo start --android",
     "android:staging": "APP_ENV=staging expo start --android",
+    "build:android": "eas build --platform android --profile development --local",
+    "build:ios": "eas build --platform ios --profile development --local",
     "ios": "expo start --ios",
     "ios:dev": "APP_ENV=development expo start --ios",
     "ios:prod": "APP_ENV=production expo start --ios",
@@ -18,6 +20,10 @@
     "start:dev": "APP_ENV=development expo start",
     "start:prod": "APP_ENV=production expo start",
     "start:staging": "APP_ENV=staging expo start",
+    "submit:android": "eas submit --platform android --profile production",
+    "submit:android:staging": "eas submit --platform android --profile staging",
+    "submit:ios": "eas submit --platform ios --profile production",
+    "submit:ios:staging": "eas submit --platform ios --profile staging",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -25,24 +31,34 @@
     "@counsy-ai/ts-rest": "workspace:*",
     "@counsy-ai/types": "workspace:*",
     "@expo/vector-icons": "^14.1.0",
+    "@hookform/resolvers": "catalog:",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@t3-oss/env-core": "catalog:",
-    "@tamagui/config": "^1.132.16",
-    "@tamagui/font-inter": "^1.132.16",
-    "@tamagui/lucide-icons": "^1.132.16",
+    "@tamagui/animations-react-native": "1.132.17",
+    "@tamagui/colors": "1.132.17",
+    "@tamagui/config": "1.132.17",
+    "@tamagui/font-inter": "1.132.17",
+    "@tamagui/lucide-icons": "1.132.17",
+    "@tamagui/theme-builder": "1.132.17",
+    "@tamagui/toast": "1.132.17",
     "@tanstack/react-query": "^5.84.2",
     "@ts-rest/react-query": "^3.52.1",
     "better-auth": "catalog:",
+    "burnt": "^0.13.0",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "^0.14.8",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "^5.2.4",
+    "expo-doctor": "^1.13.5",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
+    "expo-notifications": "^0.31.4",
     "expo-router": "~5.1.4",
     "expo-secure-store": "^14.2.3",
     "expo-splash-screen": "~0.30.10",
@@ -50,24 +66,28 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "i18next": "^25.3.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "catalog:",
     "react-i18next": "^15.6.1",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-purchases": "^9.2.2",
+    "react-native-purchases-ui": "^9.2.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tamagui": "^1.132.16",
+    "tamagui": "1.132.17",
     "zod": "catalog:",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@tamagui/babel-plugin": "^1.132.16",
+    "@tamagui/babel-plugin": "1.132.17",
     "@types/react": "~19.0.10",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "eslint": "^9.25.0",
