--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -7,6 +7,10 @@
       ]
     }
   },
+  "exclude": [
+    "node_modules",
+    "babel.config.js"
+  ],
   "extends": "expo/tsconfig.base",
   "include": [
     "**/*.ts",
