--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
+    "react-native-svg-transformer": "^1.5.1",
     "typescript": "^5.8.3"
   },
   "lint-staged": {
