--- a/packages/ts-rest/package.json
+++ b/packages/ts-rest/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "eslint": "catalog:",
     "prettier": "catalog:",
+    "prettier-package-json": "catalog:",
+    "prettier-plugin-organize-imports": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:",
     "typescript-eslint": "catalog:"
