--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -44,3 +44,5 @@ catalog:
   'prettier-package-json': ^2.8.0
   'prettier-plugin-organize-imports': ^4.1.0
   'npm-run-all': ^4.1.5
+  'react-hook-form': ^7.62.0
+  '@hookform/resolvers': ^5.2.1
