--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -48,6 +48,7 @@
     "better-auth": "catalog:",
     "burnt": "^0.13.0",
     "expo": "~53.0.20",
+    "expo-apple-authentication": "^7.2.4",
     "expo-blur": "~14.1.5",
     "expo-build-properties": "^0.14.8",
     "expo-constants": "~17.1.7",
