--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,13 +4,13 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "android": "expo start --android",
+    "android": "expo run:android",
     "android:dev": "APP_ENV=development expo start --android",
     "android:prod": "APP_ENV=production expo start --android",
     "android:staging": "APP_ENV=staging expo start --android",
     "build:android": "eas build --platform android --profile development --local",
     "build:ios": "eas build --platform ios --profile development --local",
-    "ios": "expo start --ios",
+    "ios": "expo run:ios",
     "ios:dev": "APP_ENV=development expo start --ios",
     "ios:prod": "APP_ENV=production expo start --ios",
     "ios:staging": "APP_ENV=staging expo start --ios",
@@ -68,8 +68,8 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "i18next": "^25.3.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "react-hook-form": "catalog:",
     "react-i18next": "^15.6.1",
     "react-native": "0.79.5",
