--- a/apps/mobile/.gitignore
+++ b/apps/mobile/.gitignore
@@ -1,6 +1,8 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 # dependencies
+android/
+ios/
 node_modules/
 
 # Expo
