--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -44,5 +44,7 @@ catalog:
   'prettier-package-json': ^2.8.0
   'prettier-plugin-organize-imports': ^4.1.0
   'npm-run-all': ^4.1.5
+  'react': 19.0.0
+  'react-dom': 19.0.0
   'react-hook-form': ^7.62.0
   '@hookform/resolvers': ^5.2.1
