--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -58,9 +58,11 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
+    "expo-local-authentication": "^16.0.5",
     "expo-localization": "~16.1.6",
     "expo-notifications": "^0.31.4",
     "expo-router": "~5.1.4",
+    "expo-screen-capture": "^7.2.0",
     "expo-secure-store": "^14.2.3",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
