fix: share schema between config

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -8,8 +8,15 @@
     "android:dev": "APP_ENV=development expo start --android",
     "android:prod": "APP_ENV=production expo start --android",
     "android:staging": "APP_ENV=staging expo start --android",
-    "build:android": "eas build --platform android --profile development --local",
-    "build:ios": "eas build --platform ios --profile development --local",
+    "build:all:dev": "eas build --platform all --profile development",
+    "build:android:dev": "eas build --platform android --profile development",
+    "build:android:local": "eas build --platform android --profile development --local",
+    "build:ios:dev": "eas build --platform ios --profile development",
+    "build:ios:local": "eas build --platform ios --profile development --local",
+    "devices:register": "eas device:create",
+    "eas:builds": "eas build:list --limit 10",
+    "eas:login": "eas login",
+    "eas:whoami": "eas whoami",
     "ios": "expo run:ios",
     "ios:dev": "APP_ENV=development expo start --ios",
     "ios:prod": "APP_ENV=production expo start --ios",
