feat(mobile/theme): increase light theme border colors (base/hover/press/focus) to meet WCAG ≥3:1 and align generator in themes.ts

--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
       "pnpm format"
     ]
   },
-  "packageManager": "pnpm@10.11.0"
+  "packageManager": "pnpm@10.11.0",
+  "pnpm": {
+    "protocols": {
+      "catalog": "path:packages/catalog"
+    }
+  }
 }
