--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,11 @@ updates:
     schedule:
       interval: 'monthly'
     open-pull-requests-limit: 10
+    target-branch: 'development'
 
-  - package-ecosystem: 'npm'
+  - package-ecosystem: 'pnpm'
     directory: '/'
     schedule:
       interval: 'monthly'
     open-pull-requests-limit: 10
+    target-branch: 'development'
