--- a/.github/workflows/dependabot-ci.yml
+++ b/.github/workflows/dependabot-ci.yml
@@ -23,11 +23,14 @@ jobs:
           node-version: '20'
           cache: 'pnpm'
 
-      - name: Enable corepack
-        run: corepack enable
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
 
       - name: Install dependencies (workspace)
-        run: pnpm -w install --frozen-lockfile
+        run: pnpm -w install
 
       - name: Run tests across workspaces (if present)
         run: pnpm -w -r run test --if-present
