--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -5,7 +5,7 @@
         "EXPO_PUBLIC_APP_ENV": "development",
         "APP_VERSION": "0.1.0",
         "EXPO_PUBLIC_HOST_DEV": "dev.counsy.app",
-        "EXPO_PUBLIC_API_URL": "https://api.dev.counsy.app",
+        "EXPO_PUBLIC_API_URL": "https://api-dev.counsy.app",
         "EXPO_PUBLIC_RC_API_KEY_IOS": "appl_UlRsEnKRYyHoOzgQzKoxgORLzSG",
         "EXPO_PUBLIC_RC_API_KEY_ANDROID": "goog_hICCnUfvysEUtkfVlaiqBDJGoYh"
       },
@@ -17,7 +17,7 @@
         "EXPO_PUBLIC_APP_ENV": "staging",
         "APP_VERSION": "0.9.0",
         "EXPO_PUBLIC_HOST_STG": "staging.counsy.app",
-        "EXPO_PUBLIC_API_URL": "https://api.staging.counsy.app",
+        "EXPO_PUBLIC_API_URL": "https://api-staging.counsy.app",
         "EXPO_PUBLIC_RC_API_KEY_IOS": "appl_UlRsEnKRYyHoOzgQzKoxgORLzSG",
         "EXPO_PUBLIC_RC_API_KEY_ANDROID": "goog_hICCnUfvysEUtkfVlaiqBDJGoYh"
       },
