feat: add seed command

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -23,6 +23,7 @@
     "format": "prettier --config ../config/.prettierrc --write . && prettier-package-json --write ./package.json",
     "lint": "eslint src --flag v10_config_lookup_from_file --max-warnings 0 --ext .ts,.tsx",
     "lint:fix": "eslint src --flag v10_config_lookup_from_file --max-warnings 0 --fix --ext .ts,.tsx",
+    "seed:local": "dotenv -e .env.local -- tsx src/seeds/index.ts",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
