--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -35,12 +35,11 @@
   },
   "dependencies": {
     "@better-auth/expo": "^1.3.5",
-    "@counsy-ai/db": "workspace:*",
     "@counsy-ai/ts-rest": "workspace:*",
     "@counsy-ai/types": "workspace:*",
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "catalog:",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -49,10 +48,12 @@
     "@tamagui/colors": "1.132.17",
     "@tamagui/config": "1.132.17",
     "@tamagui/font-inter": "1.132.17",
+    "@tamagui/linear-gradient": "1.132.17",
     "@tamagui/lucide-icons": "1.132.17",
     "@tamagui/theme-builder": "1.132.17",
     "@tamagui/toast": "1.132.17",
     "@tanstack/react-query": "^5.84.2",
+    "@ts-rest/core": "catalog:",
     "@ts-rest/react-query": "^3.52.1",
     "better-auth": "catalog:",
     "burnt": "^0.13.0",
@@ -66,17 +67,18 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
     "expo-local-authentication": "^16.0.5",
     "expo-localization": "~16.1.6",
     "expo-notifications": "^0.31.4",
-    "expo-router": "~5.1.4",
+    "expo-router": "~5.1.6",
     "expo-screen-capture": "^7.2.0",
-    "expo-secure-store": "^14.2.3",
+    "expo-secure-store": "^14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "i18next": "^25.5.1",
     "react": "catalog:",
@@ -105,7 +107,7 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "expo-updates": "~0.28.17",
-    "typescript": "~5.8.3"
+    "typescript": "catalog:"
   },
   "i18n": {
     "configDir": "i18n",
