--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -35,6 +35,7 @@
     "dotenv-cli": "catalog:",
     "drizzle-orm": "catalog:",
     "pg": "catalog:",
+    "tsx": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
