--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -20,7 +20,7 @@
     "db:generate": "dotenv -e ./.env.local -- drizzle-kit generate --config ./src/drizzle.config.ts",
     "db:migrate:deploy": "dotenv -e ./.env.local -- drizzle-kit migrate:deploy --config ./src/drizzle.config.ts",
     "db:migrate:local": "dotenv -e .env.local -- drizzle-kit migrate --config ./src/drizzle.config.ts",
-    "format": "prettier --config ../config/.prettierrc --write . && prettier-package-json --write ./package.json",
+    "format": "prettier --config ../config/.prettierrc --ignore-path ../../.prettierignore --write . && prettier-package-json --write ./package.json",
     "lint": "eslint src --flag v10_config_lookup_from_file --max-warnings 0 --ext .ts,.tsx",
     "lint:fix": "eslint src --flag v10_config_lookup_from_file --max-warnings 0 --fix --ext .ts,.tsx",
     "seed:local": "dotenv -e .env.local -- tsx src/seeds/index.ts",
