--- a/services/api/package.json
+++ b/services/api/package.json
@@ -14,7 +14,7 @@
     "clean": "del dist tsconfig.tsbuildinfo",
     "dev": "dotenv -e .env.local -- tsx src/index.ts",
     "dev:local": "dotenv -e .env.local -- node ./dist/index.js",
-    "format": "prettier --config ../../packages/config/.prettierrc --write . && prettier-package-json --write ./package.json",
+    "format": "prettier --config ../../packages/config/.prettierrc --ignore-path ../../.prettierignore --write . && prettier-package-json --write ./package.json",
     "lint": "eslint src --max-warnings 0 --ext .ts,.tsx",
     "lint:fix": "eslint src --max-warnings 0 --fix --ext .ts,.tsx",
     "start": "node ./dist/index.js",
