--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -18,7 +18,7 @@
     "compile": "tsc --noEmit",
     "coverage": "vitest run --coverage ",
     "dev": "mastra dev",
-    "format": "prettier --config ../config/.prettierrc --write . && prettier-package-json --write ./package.json",
+    "format": "prettier --config ../config/.prettierrc --ignore-path ../../.prettierignore --write . && prettier-package-json --write ./package.json",
     "lint": "eslint src --flag v10_config_lookup_from_file --max-warnings 0 --ext .ts,.tsx",
     "lint:fix": "eslint src --flag v10_config_lookup_from_file --max-warnings 0 --fix --ext .ts,.tsx",
     "test": "vitest",
