--- a/services/api/package.json
+++ b/services/api/package.json
@@ -12,7 +12,7 @@
     "bundle": "tsup-node",
     "bundle:watch": "tsup-node --watch",
     "clean": "del dist tsconfig.tsbuildinfo",
-    "dev": "dotenv -e .env.local -- tsx src/index.ts",
+    "dev": "dotenv -e .env.local -- tsx --watch src/index.ts",
     "dev:local": "dotenv -e .env.local -- node ./dist/index.js",
     "format": "prettier --config ../../packages/config/.prettierrc --ignore-path ../../.prettierignore --write . && prettier-package-json --write ./package.json",
     "lint": "eslint src --max-warnings 0 --ext .ts,.tsx",
