--- a/services/api/package.json
+++ b/services/api/package.json
@@ -23,7 +23,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@aws-sdk/client-sesv2": "^3.883.0",
+    "@aws-sdk/client-sesv2": "",
     "@better-auth/expo": "^1.3.5",
     "@counsy-ai/ai": "workspace:*",
     "@counsy-ai/config": "workspace:*",
@@ -31,7 +31,7 @@
     "@counsy-ai/shared": "workspace:*",
     "@counsy-ai/ts-rest": "workspace:*",
     "@counsy-ai/types": "workspace:*",
-    "@fastify/aws-lambda": "^5.1.4",
+    "@fastify/aws-lambda": "catalog:",
     "@fastify/cors": "^11.0.1",
     "@fastify/rate-limit": "^10.3.0",
     "@slack/oauth": "^3.0.3",
