--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -4,8 +4,14 @@
     "rootDir": "src",
     "outDir": "dist",
     "baseUrl": ".",
-    "composite": true
+    "composite": true,
+    "module": "ESNext",
+    "types": [
+      "node"
+    ]
   },
   "extends": "@counsy-ai/config/typescript-config/library.json",
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
