--- a/services/api/package.json
+++ b/services/api/package.json
@@ -23,7 +23,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@aws-sdk/client-sesv2": "",
+    "@aws-sdk/client-sns": "catalog:",
     "@better-auth/expo": "^1.3.5",
     "@counsy-ai/ai": "workspace:*",
     "@counsy-ai/config": "workspace:*",
