--- a/services/notifications/tsconfig.json
+++ b/services/notifications/tsconfig.json
@@ -23,6 +23,7 @@
   ],
   "extends": "@counsy-ai/config/typescript-config/library.json",
   "include": [
-    "src"
+    "src",
+    "src/**/*.json"
   ]
 }
