feat: improve notifications payload, sqs queue payload sizes and include revenue cat notifications

--- a/services/notifications/package.json
+++ b/services/notifications/package.json
@@ -33,6 +33,7 @@
     "@counsy-ai/shared": "workspace:*",
     "@counsy-ai/types": "workspace:*",
     "@fastify/aws-lambda": "catalog:",
+    "@paralleldrive/cuid2": "catalog:",
     "@react-email/components": "0.5.3",
     "@react-email/render": "1.2.3",
     "@t3-oss/env-core": "catalog:",
