--- a/services/api/package.json
+++ b/services/api/package.json
@@ -34,6 +34,7 @@
     "@fastify/aws-lambda": "catalog:",
     "@fastify/cors": "^11.0.1",
     "@fastify/rate-limit": "^10.3.0",
+    "@paralleldrive/cuid2": "catalog:",
     "@slack/oauth": "^3.0.3",
     "@slack/web-api": "^7.9.3",
     "@t3-oss/env-core": "catalog:",
