--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,10 @@ services:
       - DEBUG=0
       - DOCKER_HOST=unix:///var/run/docker.sock
       - NOTIFICATIONS_TOPIC_NAME=notifications-topic
+      - QUEUE_NAMES=notifications
       - PERSISTENCE=1
       - LAMBDA_EXECUTOR=docker
     volumes:
-      - ./local/aws/init:/etc/localstack/init/ready.d
       - /var/run/docker.sock:/var/run/docker.sock
       - localstack-data:/var/lib/localstack
     networks:
@@ -39,6 +39,7 @@ services:
 
   aws-init:
     image: amazon/aws-cli:2.13.0
+    entrypoint: ['/bin/sh', '-c']
     depends_on:
       localstack:
         condition: service_healthy
